--- a/app/src/main/res/layout/item_layout_request.xml
+++ b/app/src/main/res/layout/item_layout_request.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@color/white_background"
     android:textSize="18sp"
+    android:padding="5dp"
+    android:layout_margin="10dp"
     android:textStyle="bold"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
