--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,75 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/main_orange">
+    android:background="@color/main_orange"
+    tools:layout_width="280dp">
 
     <TextView
         android:id="@+id/side_menu_app_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/side_menu_infos_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/side_menu_infos_layout"
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/side_menu_picture"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="5dp"
+        android:src="@drawable/ic_profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/side_menu_app_title" />
+
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@id/side_menu_picture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/side_menu_picture"
+        app:layout_constraintTop_toTopOf="@id/side_menu_picture">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/side_menu_picture"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_profile"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/side_menu_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:text="NOM PRENOM"
+            tools:visibility="visible" />
+
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@id/side_menu_picture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/side_menu_picture"
             app:layout_constraintTop_toTopOf="@id/side_menu_picture">
-
-            <TextView
-                android:id="@+id/side_menu_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:visibility="gone"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/side_menu_picture"
-                app:layout_constraintStart_toEndOf="@id/side_menu_picture"
-                app:layout_constraintTop_toTopOf="@id/side_menu_picture"
-                tools:text="NOM PRENOM" />
 
             <TextView
                 android:id="@+id/side_menu_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:padding="10dp"
                 android:text="@string/drawer_header_email"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@id/side_menu_picture"
-                app:layout_constraintTop_toBottomOf="@id/side_menu_name" />
+                android:visibility="gone"
+                tools:text="ejoitertretterttjoit@jzieojrzeoire.fr"
+                tools:visibility="visible" />
 
-        </LinearLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
